Review comments
Signed-off-by: Flurb <private@tjalma.com>